scss/app.scss
/* ... */
.search_category {
	// Preventing the category thumbnails from having dot points, and vertically aligning them correctly
	list-style: none;
	list-style-type: none;
	margin-left: 0;
	li {
		display: inline;
	}
}

.part-finder {
//	display: none;
	.search_attribute_name {
		display: none;
	}
	.search_att_section {
		@extend .small-12;
		@extend .medium-4;
		@extend .columns;
	}
}

// Styling the category crumbs 
.search_category_crumbs {
	width: 100%;
	border: none;
	background: none;
	tbody tr td {
		display: block;
		padding: 0;
		overflow: hidden;
		margin-left: 0;
		list-style: none;
		li {
			// This stops the top level category from showing
			&:first-child {
				display: none;
			}
			// This stops the first visible crumb from having a symbol before it
			&:nth-child(2) {
				&:before {
					display: none!important;
				}
			}
			@media #{$small-down} {
				padding-bottom: 0.75rem;
			}
		}
		&> * {
			margin: 0;
			float: left;
			font-size: 0.61111rem;
			line-height: 0.61111rem;
			text-transform: uppercase;
			list-style: none;
			// This controls the symbol between crumbs
			&:before {
				content: ">";
				color: #aaaaaa;
				padding: 0 5px;
				position: relative;
				top: 1px;
			}
		}
	}
}

.slider-bg {
	width:100%;
	margin: 1rem 0;
	.slider-container {
		.slick-slider {
			div {
				.slide-box {
					@include breakpoint(large) {
						width: 62.5rem;
					}
					img {
							max-height: rem-calc(350);
					}
				}
			}
		}
	}
	.slick-arrow-box {
		i.fa {
			margin:1rem 1rem 0;
			cursor: pointer;
			&:hover {
				color: scale-color($col-dark, $lightness: -10%);
			}
		}
	}
}

// PUTS A BOTTOM BORDER ON THE MODEL PRODUCT ACCORDION ELEMENTS
.model-product-accordion {
	.model-product-pnl {
		border-bottom: 1px solid $col-grey-3;
// Font for the panel labels
		.pnl-lbl {
			color: $col-light-grey-font;
			@extend .button-title;
			@extend .text-shadow;
		}
		.plus {
			display: inline-block;
			color: $col-link;
			.fa {
				font-size: rem-calc(14);
			}
		}
		.minus {
			display: none;
		}
	}
	.mopro-pnl-title {
		th {
			font-weight: bold;
			color: $col-dark-font;
			@extend .button-title;
		}
		// Hides the th with colspan and shows the th without colspan when on mobile
		.mopro-pnl-mob {
			@media #{$small-down} {
				display: block;
			}
			@media #{$medium-and-up} {
				display: none;
			}
		}
		// Shows the th with colspan and hides the th without colspan when on desktop
		.mopro-pnl-desk {
			@media #{$small-down} {
				display: none;
			}
			@media #{$medium-and-up} {
				display: table-cell;
			}
		}
	}
	.mopro-product-row {
		td {
			@media #{$small-down} {
				display: inline-block;
				text-align: center;
			}
		}
		.mopro-product-img {
			min-width: 70px;
			@media #{$small-down} {
				width: 100%;
			}
		}
		.mopro-product-title {
			width: 100%;
			p, b {
				line-height: 1.125rem !important;
				font-size: 0.875rem !important;
				margin-bottom: 0px !important;
			}
		}
		.mopro-product-rrp, .mopro-product-code {
			@media #{$small-down} {
				width: 50%;
			}
		}
		.mopro-view-link, .mopro-add-cart {
			@media #{$small-down} {
				width: 50%;
				border-bottom: 1px solid #DDDDDD;
			}
		}
		.mopro-product-code, .mopro-view-link, .mopro-add-cart {
			a {
				white-space: nowrap;
			}
		}
		.prode-stock-high {
			@extend .green;
			.prode-stock-text-none, .prode-stock-text-low {
				display: none;
			}
		}
		.prode-stock-low {
			@extend .orange;
			.prode-stock-text-none, .prode-stock-text-high {
				display: none;
			}
		}
		.prode-stock-none {
			@extend .pasred;
			.prode-stock-text-low, .prode-stock-text-high {
				display: none;
			}
		}
	}
// SHOW/HIDE THE PLUS/MINUS ON ACTIVE/INACTIVE MODEL PRODUCT ACCORDION ELEMENTS
	&.active {
		a {
			.plus {
				display: none;
			}
			.minus {
				display: inline-block;
				color: $col-link;
				.fa {
					font-size: rem-calc(14);
				}
			}
		}
	}
}

// NEWS BLOG LISTING
.news-pagination {
	margin-bottom: 1rem;
}
.news-record {
	color: $col-light-grey-font;
	margin-top: 1rem;
	margin-bottom: 1rem;
	overflow: hidden;
	.news-header {
		@extend .grey3-bg;
		margin-bottom: 0;
		text-shadow: $shad-black;
		color: $col-light-grey-font !important;
		small {
			vertical-align: middle;
		}
	}
	.news-title {
		overflow: hidden;
		width: 100%;
		position: relative;
		padding: 0;
		background: none;
		height: auto;
		border-top: 0px;
		border-right: 1px solid #bbb;
		border-bottom: 0px;
		border-left: 1px solid #bbb;
		p {
			background: rgba(0,0,0,0.75);
			padding: 1rem;
			text-align: center;
			color: #f7f7f7;
			position: absolute;
			left: 0;
			top: 0;
			text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
			width: 100%;
			@media #{$large-and-up} {
				font-size: 1.6rem;
			}
			@media #{$medium-only} {
				font-size: 1.3rem;
			}
			@media #{$small-only} {
				font-size: 1rem;
			}
		}
		img {
			width: auto!important;
			height: auto!important;
		}		
	}
.video-thumbnail {
	border: 0px !important;
	.video-title {
		line-height: 2.25rem;
		font-weight: bold;
	}
}
	.news-body-short {
		width: 100%;
		padding: 2rem 1rem 1rem 1rem;
		background: rgba(0, 0, 0, 0.15);
		border-top: 0px;
		border-right: 1px solid #bbb;
		border-bottom: 1px solid #bbb;
		border-left: 1px solid #bbb;
		p, p strong {
			font-weight: 300 !important;
			color: #333;
		}
	}
	.news-body {
		width: 100%;
		padding: 2rem 0rem 1rem 0rem;
		p>img {
			text-align: center;
		}
		img {
			max-width: 100%;
			width: auto !important;
			height: auto !important;
		}
	}
}
.news-border-box-overwrite {
	border: none !important;
	box-shadow: none !important;
	color: #333!important;
	padding-left: 0px!important;
	padding-right: 0px!important;
}
/* ... */

